# proj-cmd

./: Cargo.toml  README.md  t
shell-scripts/: proj-fish.sh  proj-nu.sh  proj.sh
src/: args.rs  handlers.rs  main.rs
