[package]
name = "proj-cmd"
version = "0.0.1"
edition = "2021" 
authors = ["Joseph Chacko <josephchacko2006@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "project organization tool made for learning rust"
readme = "README.md"
homepage = "https://github.com/maverik-io"
repository = "https://github.com/maverik-io/proj-cmd"
keywords = ["project", "organization"]
categories = ["command-line-utilities"]


[dependencies]
clap = { version = "4.5.16", features = ["derive"]}
dirs = "5.0.1"
